--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>정세진의 포트폴리오</title>
 </head>
 
-<body>
+<body style="background-color: darkgray;">
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
@@ -43,7 +43,7 @@
       </div>
     </nav>
   </header>
-  <main id="frontpage" class="frontpage">
+  <main id="frontpage" class="frontpage offset-1 col-10">
     <div class="card">
       <!-- <img src="..." class="card-img-top" alt="사진공간"> -->
       <div id="card-picture">나중에 사진 넣기</div>
@@ -64,14 +64,13 @@
       </div>
     </div>
   </main>
-  <article id="studied" class="title">
+  <article id="studied" class="studied offset-1 col-10">
     <h3 class="font-weight-bold">Studied</h3>
     <p id="year">- 2023.07 ~ now : SSAFY <span id="about" class="text-secondary">Python, Algorism, HTML, CSS, Bootsrap</span></p>   
     <p id="year">- 2022.08 ~ 2023.06 : SGA <span id="about" class="text-secondary">C, C++, UNITY</span></p>   
-    <p id="year">- 2014.03 ~ 2022.08 : UNIST <span id="about" class="text-secondary">신소재 공학부</span></p>   
-
+    <p id="year">- 2014.03 ~ 2022.08 : UNIST <span id="about" class="text-secondary">신소재 공학부</span></p>
   </article>
-  <article id="project" class="project">project</article>
+  <article id="project" class="project offset-1 col-10">Project</article>
   <footer class="footer">footer</footer>
   <h1 id="not-provided">
     이 사이트는 너비 576px 사이즈 미만의 화면에서 제공되지 않습니다.
